[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CNNreg"
version = "0.1.0"
description = "CNN-based regression for cell type deconvolution of bulk RNA-seq using scRNA-seq reference"
readme = "README.md"
authors = [
    {name="Xue Wang", email="wang.xue@mayo.edu"}
]
maintainers = [
    {name = "Yuanhang Liu", email = "liu.yuanhang@mayo.edu"},
    {name="Xue Wang", email="wang.xue@mayo.edu"}
]
license = {text="MIT"}
requires-python = ">=3.9"
dependencies = [
    "torch>=1.10.0",
    "torchmetrics>=0.10.0",
    "torchsort>=0.1.0",
    "numpy",
    "pandas"
]

[project.scripts]
cnnreg = "CNNreg.cli:main"
